# coding-challenge

./: Cargo.toml  README.md  todo.md
clients/python/: main.py
clients/rust/: Cargo.toml
clients/rust/src/: main.rs
src/: async_game_trait.rs  controller.rs  gametraits.rs  lib.rs  main.rs  messages.rs  network_wrap.rs  player_table.rs  turn_tracker.rs  ui.rs  user_connection.rs
src/games/: README.md  dumb.rs  gomoku.md  gomoku.rs  mod.rs
systemtest/: Cargo.toml
systemtest/src/: main.rs
tests/: integration_test.rs
