[package]
name = "coding-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dict = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "*"
async-trait = "*"
druid = { git = "https://github.com/linebender/druid.git", features=["im"] }
dyn-clone = "*"
env_logger = "*"
log = "*"
arr_macro = "*"
itertools = "*"
rand = "*"